shared-core-rs/bindings/swift/hyperwhisper_coreFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void ffi_hyperwhisper_core_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_i64(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_i64(uint64_t handle
);
int64_t ffi_hyperwhisper_core_rust_future_complete_i64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_f32(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_f32(uint64_t handle
);
float ffi_hyperwhisper_core_rust_future_complete_f32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_f64(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_f64(uint64_t handle
);
double ffi_hyperwhisper_core_rust_future_complete_f64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_pointer(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_pointer(uint64_t handle
);
void*_Nonnull ffi_hyperwhisper_core_rust_future_complete_pointer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_hyperwhisper_core_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_void(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_void(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_hyperwhisper_core_checksum_func_app_classify(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_app_type_from_raw(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_app_type_prompt_value(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_append_trailing_space(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_apply_autocapitalize(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_apply_hardened_replacement(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_assemblyai_build_create_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_assemblyai_build_poll_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_assemblyai_build_upload_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_assemblyai_parse_create_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_assemblyai_parse_poll_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_assemblyai_parse_upload_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_azure_mai_build_transcribe_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_azure_mai_parse_transcribe_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_build_health_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_build_health_request_with_base(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_build_system_info(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_build_system_prompt(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_classify_error(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_pp_default_model(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_pp_is_enabled(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_pp_llm_model_header(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_pp_llm_provider(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_pp_model(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_pp_models(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_stt_credits_per_minute(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_stt_credits_per_minute_for_model(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_stt_custom_vocabulary_field_name(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_stt_default_model_id(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_stt_language_codes(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_stt_models(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_stt_normalize_cloud_provider(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_stt_provider(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_cloud_stt_supports_custom_vocabulary(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_contains_cjk(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_deepgram_build_transcribe_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_deepgram_parse_transcribe_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_elevenlabs_build_transcribe_request(void
    
);