shared-core-rs/bindings/csharp/hyperwhisper_core.cs


    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_i64(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_i64(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_i64(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern long ffi_hyperwhisper_core_rust_future_complete_i64(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_f32(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_f32(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_f32(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern float ffi_hyperwhisper_core_rust_future_complete_f32(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_f64(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_f64(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_f64(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern double ffi_hyperwhisper_core_rust_future_complete_f64(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_pointer(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_pointer(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_pointer(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr ffi_hyperwhisper_core_rust_future_complete_pointer(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_rust_buffer(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_rust_buffer(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_rust_buffer(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer ffi_hyperwhisper_core_rust_future_complete_rust_buffer(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_void(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_void(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_void(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_complete_void(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_app_classify(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_app_type_from_raw(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_app_type_prompt_value(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_append_trailing_space(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_apply_autocapitalize(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_apply_hardened_replacement(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_assemblyai_build_create_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_assemblyai_build_poll_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_assemblyai_build_upload_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_assemblyai_parse_create_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_assemblyai_parse_poll_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_assemblyai_parse_upload_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_azure_mai_build_transcribe_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_azure_mai_parse_transcribe_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_build_health_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_build_health_request_with_base(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_build_system_info(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_build_system_prompt(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_classify_error(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_pp_default_model(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_pp_is_enabled(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_pp_llm_model_header(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_pp_llm_provider(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_pp_model(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_pp_models(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_stt_credits_per_minute(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_stt_credits_per_minute_for_model(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_stt_custom_vocabulary_field_name(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_stt_default_model_id(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_stt_language_codes(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_stt_models(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_stt_normalize_cloud_provider(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_stt_provider(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_cloud_stt_supports_custom_vocabulary(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_contains_cjk(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_deepgram_build_transcribe_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_deepgram_parse_transcribe_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_elevenlabs_build_transcribe_request(
    );
